feat: add participants infos on historic activities